--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* themes */
 /* When nothing is loaded, the default theme will be applied. */
 /* see https://github.com/hiroppy/fusuma#themes */
-/* @import '@fusuma/client/assets/style/themes/pop.css'; */
+@import '@fusuma/client/assets/style/themes/pop.css';
 /* @import '@fusuma/client/assets/style/themes/babel.css'; */
 /* @import '@fusuma/client/assets/style/themes/webpack.css'; */
 /* @import '@fusuma/client/assets/style/themes/node.css'; */
